# Wavy

./: .editorconfig  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
cli/vcd-parser/: top-vcd-parser.cpp  vcd-char-stream.cpp  vcd-char-stream.h  vcd-data.h  vcd-parser.cpp  vcd-parser.h  vcd-token-stream.cpp  vcd-token-stream.h
examples/: fgyk.vcd  jtag.vcd  log  mine_first.vcd  mine_second.vcd  mine_third.vcd  random.vcd  std.vcd  the_imperial_march.vcd
gui/: capture_device_dialog.cpp  capture_device_dialog.h  capture_device_dialog.ui  info-table-widget.cpp  info-table-widget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  path.cpp  path.h  scope-tree-widget.cpp  scope-tree-widget.h  vcd-graphics-view.cpp  vcd-graphics-view.h  vcd-plotter.cpp  vcd-plotter.h  waves.cpp  waves.h  wavy-frontend.cpp  wavy-frontend.h  wavy-main-window.cpp  wavy-main-window.h  wavy-main-window.ui
lib/vcd-parser/: top-vcd-parser.cpp  vcd-char-stream.cpp  vcd-char-stream.h  vcd-data.h  vcd-parser.cpp  vcd-parser.h  vcd-token-stream.cpp  vcd-token-stream.h
pico/: CMakeLists.txt  main.c  proto.h  tusb_config.h  usb_descriptors.c
pikernely/: .gitignore  Makefile  pikernely.c  test.c
